# polishingrobot

./: README.md  readme.md
aubo_control/: CMakeLists.txt  README.md  package.xml
aubo_control/archive/: aubo_collisition.py  move2_tcp_smarteye_point.py  move_circle.py  move_to_smarteye_point_with_normal.py  test_kk.py
aubo_control/aubo/: Untitled-1  aubo_bin_packing_node.py  aubo_collisition.py  aubo_collisition_bk.py  aubo_kienamatics.py  aubo_oblique_take_picture.py  aubo_robotcontrol.py  aubo_ros_driver.py  aubo_ros_driver_state.py  aubo_tcp_test.py  ceshicode  data1.mat  get_data_from_camera.py  move_aubo_to_a_point.py  move_to_smarteye_point.py  move_to_smarteye_point_with_normal.py  move_to_smarteye_pointbk.py  point_and_take_a_look.py  ros_driver_test.py  test_kk.py
aubo_control/config/: camera_aubo_config.yaml
aubo_control/launch/: aubo_control_node.launch  aubo_ros_startup.launch  move2_camera_smarteye.launch
aubo_cplusplus_control/: CMakeLists.txt  package.xml
aubo_cplusplus_control/applicationPoint/: waypointmonitor.cpp.bak  waypointmonitor.h.bak
aubo_cplusplus_control/dependents/libconfig/lib-win32/: libconfig.lib
aubo_cplusplus_control/example/: example_3.cpp  example_4.cpp  example_5.cpp
aubo_cplusplus_control/include/aubo_cplusplus_control/: aubo_ros_driver.h
aubo_cplusplus_control/launch/: aubo_ros_driver.launch
aubo_cplusplus_control/src/: a.out  aubo_main.cpp  aubo_ros_driver.cpp  aubo_ros_driver_node.cpp  test.cpp  util.cpp
can_drive_pkg/: CMakeLists.txt  package.xml
can_drive_pkg/config/: can_config.yaml
can_drive_pkg/include/can_drive_pkg/: can_application.h  can_drive.h  motor_control.h
can_drive_pkg/launch/: diff_driver_reader.launch  motor_driver.launch  sensor_bringup.launch  system_start.launch
can_drive_pkg/src/: can_drive.cpp  can_drive_communication.cpp  motor_control.cpp
js_turtle/: CMakeLists.txt  package.xml
js_turtle/launch/: js_turtle_node.launch
js_turtle/src/: js_turtle.cpp
polishing_pkg/: CMakeLists.txt  package.xml
polishing_pkg/cfg/: polishing_dy.cfg
polishing_pkg/include/: aubo_kinematics.h
polishing_pkg/src/: aubo_kinematics_test.cpp  pcl_ransac_plannar.cpp  pcl_ransac_plannar_bk.cpp  pcl_ransac_plannar_bk2.cpp  pcl_ransac_plannar_bk3.cpp  pcl_ransac_plannar_final.cpp  pcl_ransac_plannar_oushicluster.cpp  pointcloud_merge.cpp  test_my.cpp  tsp_problem.cpp
polishingrobot_description/: CMakeLists.txt  package.xml  urdf.rviz
polishingrobot_description/config/: joint_names_polishingrobot_description.yaml
polishingrobot_description/launch/: display.launch  gazebo.launch
polishingrobot_description/meshes/: base_link.STL  base_link2.STL  mobilebase_link.STL  rod_link.STL  rodclimbing_link.STL
polishingrobot_description/urdf/: polishingrobot_description.csv  polishingrobot_description.urdf
polishingrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
polishingrobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  polishingrobot_description.srdf  ros_controllers.yaml
polishingrobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_test.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  polishingrobot_description_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
polishingrobot_offlineplanner/: readme.md
polishingrobot_onlineplanner/: CMakeLists.txt  package.xml
polishingrobot_onlineplanner/include/: aubo_10_polishing_opreating.h
polishingrobot_onlineplanner/include/polishingrobot_onlineplanner/: aubo_10_polishing_opreating.h
polishingrobot_onlineplanner/launch/: motion_planning_test.launch  move_group_aubo.launch  move_group_aubo_python.launch  planning_scene.launch
polishingrobot_onlineplanner/mesh/20200914/: 20200914_polishingrobot_2dmap.tif  20200914_polishingrobot_2dmap.txt  20200914_polishingrobot_wall.stl
polishingrobot_onlineplanner/scripts/: move_group_python.py  pub_camera_data_to_base.py
polishingrobot_onlineplanner/src/: aubo10_collision_detecting.cpp  aubo_10_polishing_opreating.cpp  aubo_10_polishing_opreating_node.cpp  aubo_10_test_node.cpp  aubo_kinematics.cpp  aubo_kinematics_test.cpp  marker_test.cpp  motion_planning_aubo.cpp  move_group_aubo.cpp  move_group_aubo_model_know.cpp  planning_scene.cpp
polishingrobot_scanning_result/: 20200716_scan_planningstl.pcd
smarteye_embedded_ros/: CMakeLists.txt
smarteye_embedded_ros/config/: camera_aubo_config.yaml
smarteye_embedded_ros/doc/: initial_smarteye_network.sh  initial_smarteye_network_real_pc.sh  sdk_interface.md
smarteye_embedded_ros/include/: aubo_kinematics.h
smarteye_embedded_ros/include/smarteye_embedded_ros/: smarteye_with_viewpoint_and_env_explorition.h
smarteye_embedded_ros/launch/: smarteye_demo.launch  smarteye_octomap.launch  smarteye_pcl_opreating.launch  smarteye_pub_detection.launch  smarteye_pub_viewpoint.launch
smarteye_embedded_ros/rviz/: smart_eye.rviz  smart_eye_detection.rviz  smart_eye_pcl.rviz
smarteye_embedded_ros/smart_eye_sdk/doc/docAPI/: Embedded Binocular Camera_API Document Instructions.docx
smarteye_embedded_ros/smart_eye_sdk/include/: emCommon_type.h  emPointCloudOperation.h
smarteye_embedded_ros/smart_eye_sdk/samples/samples01_gui/: CMakeLists.txt  emSmarteyeUI.cpp  emSmarteyeUI.h  emSmarteyeUI.ui  generate_demo.sh  main.cpp
smarteye_embedded_ros/src/: aubo_kinematics.cpp  aubo_kinematics_test.cpp  data_info_eye_hand.md  smarteye_demo.cpp  smarteye_ros_demo.cpp  smarteye_ros_detection_node.cpp  smarteye_ros_detection_node_bk.cpp  smarteye_ros_detetction_node.cpp  smarteye_with_viewpoint.cpp  smarteye_with_viewpoint_and_env_explorition.cpp  smarteye_with_viewpoint_and_env_explorition_node.cpp  smarteye_with_viewpoint_bk.cpp
(+6 files in other folders)
